Renamed POST /api/v1/products/{productId}/reviews -> /api/v1/products/{productId}/review
